# deque

./: CMakeLists.txt  LICENSE
include/deque/: deque.hpp
include/deque/detail/: iterator.hpp  memory.hpp  storage.hpp
src/: CMakeLists.txt  deque_dummy.cpp
tests/: CMakeLists.txt  test_api_basic.cpp  test_compare.cpp  test_iterators.cpp  test_main.cpp  test_modifiers.cpp  test_vs_std_deque.cpp
